# swagger/output.json
@@ -47,10 +47,10 @@
           {
             "name": "login, password",
             "in": "body",
-            "description": "Authorization",
+            "description": "Authorization data",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/AdminAuthData"
+              "$ref": "#/definitions/AdminAuth"
             }
           }
         ],
@@ -58,24 +58,7 @@
           "200": {
             "description": "Result info and cookies",
             "schema": {
-              "type": "object",
-              "properties": {
-                "status": {
-                  "type": "string",
-                  "example": "string"
-                },
-                "statusCod": {
-                  "type": "number",
-                  "example": 200
-                },
-                "message": {
-                  "type": "string",
-                  "example": "string"
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
+              "$ref": "#/definitions/Response"
             }
           },
           "400": {
@@ -99,10 +82,10 @@
           {
             "name": "login, password",
             "in": "body",
-            "description": "Authorization",
+            "description": "Authorization data",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/AdminAuthData"
+              "$ref": "#/definitions/AdminAuth"
             }
           }
         ],
@@ -111,24 +94,7 @@
             "description": "Result info",
             "in": "cookie",
             "schema": {
-              "type": "object",
-              "properties": {
-                "status": {
-                  "type": "string",
-                  "example": "string"
-                },
-                "statusCod": {
-                  "type": "number",
-                  "example": 201
-                },
-                "message": {
-                  "type": "string",
-                  "example": "string"
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
+              "$ref": "#/definitions/Response"
             }
           },
           "400": {
@@ -152,7 +118,7 @@
           {
             "name": "login, password",
             "in": "body",
-            "description": "Authorization",
+            "description": "Authorization data",
             "required": true,
             "schema": {
               "type": "object",
@@ -169,24 +135,7 @@
           "200": {
             "description": "Result info and cookies",
             "schema": {
-              "type": "object",
-              "properties": {
-                "status": {
-                  "type": "string",
-                  "example": "string"
-                },
-                "statusCod": {
-                  "type": "number",
-                  "example": 200
-                },
-                "message": {
-                  "type": "string",
-                  "example": "string"
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
+              "$ref": "#/definitions/Response"
             }
           },
           "400": {
@@ -197,10 +146,304 @@
           }
         }
       }
+    },
+    "/admin/projects": {
+      "post": {
+        "tags": [
+          "Admin"
+        ],
+        "summary": "create project",
+        "description": "Allows the administrator to create a new project",
+        "parameters": [
+          {
+            "name": "title, description, img",
+            "in": "body",
+            "description": "New project data",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "title": {
+                  "type": "string",
+                  "example": "New Project"
+                },
+                "description": {
+                  "type": "string",
+                  "example": "Project desc"
+                },
+                "img": {
+                  "type": "string",
+                  "example": "img link"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Result info",
+            "schema": {
+              "$ref": "#/definitions/Response"
+            }
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "Admin"
+        ],
+        "summary": "edit project",
+        "description": "Allows the administrator to edit a project",
+        "parameters": [
+          {
+            "name": "id, title, description, img",
+            "in": "body",
+            "description": "Edited project data",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Project"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Result info",
+            "schema": {
+              "$ref": "#/definitions/Response"
+            }
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Admin"
+        ],
+        "summary": "delete project",
+        "description": "Allows the administrator to delete a project",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "body",
+            "description": "Deleted project id",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "_id": {
+                  "type": "string",
+                  "example": "string"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Result info",
+            "schema": {
+              "$ref": "#/definitions/Response"
+            }
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/admin/feedbacks": {
+      "post": {
+        "tags": [
+          "Admin"
+        ],
+        "summary": "create feedback",
+        "description": "Allows the administrator to create a new feedback",
+        "parameters": [
+          {
+            "name": "firstName, lastName, text, rating",
+            "in": "body",
+            "description": "New feedback data",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "firstName": {
+                  "type": "string",
+                  "example": "Test"
+                },
+                "lastName": {
+                  "type": "string",
+                  "example": "Person"
+                },
+                "text": {
+                  "type": "string",
+                  "example": "test text"
+                },
+                "rating": {
+                  "type": "number",
+                  "example": 5
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Result info",
+            "schema": {
+              "$ref": "#/definitions/Response"
+            }
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "Admin"
+        ],
+        "summary": "edit feedback",
+        "description": "Allows the administrator to edit a feedback",
+        "parameters": [
+          {
+            "name": "_id, firstName, lastName, text, rating",
+            "in": "body",
+            "description": "Edited feedback data",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Feedback"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Result info",
+            "schema": {
+              "$ref": "#/definitions/Response"
+            }
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Admin"
+        ],
+        "summary": "delete feedback",
+        "description": "Allows the administrator to delete a feedback",
+        "parameters": [
+          {
+            "name": "_id",
+            "in": "body",
+            "description": "Delete feedback",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "_id": {
+                  "type": "string",
+                  "example": "string"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Result info",
+            "schema": {
+              "$ref": "#/definitions/Response"
+            }
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/projects": {
+      "get": {
+        "tags": [
+          "User"
+        ],
+        "summary": "get projects",
+        "description": "Get projects",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Result info",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/Response"
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/feedbacks": {
+      "get": {
+        "tags": [
+          "User"
+        ],
+        "summary": "get feedbacks",
+        "description": "Get feedbacks",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Result info",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/Response"
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
     }
   },
   "definitions": {
-    "AdminAuthData": {
+    "AdminAuth": {
       "type": "object",
       "properties": {
         "login": {
@@ -210,6 +453,65 @@
         "password": {
           "type": "string",
           "example": "admin"
+        }
+      }
+    },
+    "Project": {
+      "type": "object",
+      "properties": {
+        "_id": {
+          "type": "string",
+          "example": "id"
+        },
+        "title": {
+          "type": "string",
+          "example": "New Project"
+        },
+        "description": {
+          "type": "string",
+          "example": "Project desc"
+        },
+        "img": {
+          "type": "string",
+          "example": "img link"
+        }
+      }
+    },
+    "Feedback": {
+      "type": "object",
+      "properties": {
+        "firstName": {
+          "type": "string",
+          "example": "Test"
+        },
+        "lastName": {
+          "type": "string",
+          "example": "Person"
+        },
+        "text": {
+          "type": "string",
+          "example": "test text"
+        },
+        "rating": {
+          "type": "number",
+          "example": 5
+        }
+      }
+    },
+    "Response": {
+      "type": "object",
+      "properties": {
+        "status": {
+          "type": "string",
+          "example": "string"
+        },
+        "statusCod": {
+          "type": "string",
+          "example": "number"
+        },
+        "message": {
+          "type": "string",
+          "example": "string"
         }
       }
     }
